[names] are references to people in the AUTHORS file.

Changed in ATK 5.5.1
--------------------
* Introduced atkeditlng which can be passed along to force ML attributes to
  display a specific language. [Boy]
* Fixed a bug in the 'remove current file' feature of atkFileAttribute when
  AF_FILE_PHYSICAL_DELETE was set. [Ivo]

Changes in ATK 5.5
------------------
+ Added class atkMail for sending e-mails just like the normal mail function
  does, but with the ability to disable the sending of e-mails (and in the
  future send e-mails to other addresses etc.) for debugging purposes. [Peter]
+ Added support for configuration file overrides by other sections. [Peter]
+ Made atkErrorHandler put notices and php5 strict errors into the atk debug
  log so developers can see them. [Guido]
+ Added validate() method to atkDateTimeAttribute so both the date and time
  parts can be validated upon input. [Lineke]
+ Flags for the atkDateTimeAttribute are now also passed to its internal
  atkDateAttribute and the atkTimeAttribute. [Lineke]
+ Added setForceUpdate() method to atkAttribute to force update of its value
  upon save. [Boy]
+ Added 'mock' database drivers for testing purposes. [Boy]
+ Added atkMockNode to emulate a node, for testing purposes. [Ivo]
+ Added atkTestCase baseclass for unittests, that features the ability to
  replace database connections, nodes and the securitymanager with mock
  objects. [Ivo, Boy]
+ Added ability to pass ?atkmodule=modname to test.php to run only the tests
  of a specified module. [Ivo]
+ Added addFallbackModule() method to atkLanguage. [Ivo]
+ Added collapsible groups feature to atkProfileAttribute. [Harrie]
+ Added 'select all/select none' buttons per group in atkProfileAttribute.
  [Harrie]
+ Added tab security. It is now possible to grant/prevent access to a single
  tab of a node. [Harrie]
+ Added atkSetNode() counterpart for atkGetNode(), to set nodes to a different
  instance at runtime. [Ivo]