@@ -1,25 +1,26 @@
 Author
 ------
-Ivo Jansch         <ivo@achievo.org>
+Ivo Jansch             <ivo@achievo.org>
 
 
 Additional Development
 ----------------------
-Sandy Pleyte       <sandy@achievo.org>
-Peter Verhage      <peter@achievo.org>
-Wim Kosten         <wim@ibuildings.nl>
-Maurice Maas       <maurice@ibuildings.nl>
-Martin Roest       <martin@ibuildings.nl>
-Lineke Willems     <lineke@achievo.org>
-Ludo Beumer        <ludo@ibuildings.nl>
-Boy Baukema        <boy@ibuildings.nl>
-Dennis-Jan Broerse <dennisjan@ibuildings.nl>
+Sandy Pleyte           <sandy@achievo.org>
+Peter Verhage          <peter@achievo.org>
+Wim Kosten             <wim@ibuildings.nl>
+Maurice Maas           <maurice@ibuildings.nl>
+Martin Roest           <martin@ibuildings.nl>
+Lineke Willems         <lineke@achievo.org>
+Ludo Beumer            <ludo@ibuildings.nl>
+Boy Baukema            <boy@ibuildings.nl>
+Dennis-Jan Broerse     <dennisjan@ibuildings.nl>
+Patrick van der Velden <patrick@ibuildings.nl>
 
 
 Marketing
 ----------
-Jeroen Stephan       <jeroen@ibuildings.nl>
-Jasper van der Hulst <jasper@ibuildings.nl>
+Jeroen Stephan         <jeroen@ibuildings.nl>
+Jasper van der Hulst   <jasper@ibuildings.nl>
 
 
 Sponsors
@@ -170,7 +171,7 @@ Theme Designers
 'outlook'   Paul Verhoeff   <paul@ibuildings.nl>
 'win2k'     Markus Schubert <achievo@schubert24.com>
 'moronic'   Sandy Pleyte    <sandy@achievo.org>
-  
+
 
 Other Contributors
 ------------------
